# sudolver

./: .gitignore  README.md
.github/workflows/: e2e.yml  sudolver_api.yml  weekly_image_refresh.yml
docs/: .gitignore  antora-playbook.yml  kroki.js  package-lock.json  package.json
docs/main_component/: antora.yml
sudolver_api/: .bandit  .dockerignore  .env  Dockerfile  build_image.sh  fly.toml  pyproject.toml  setup.cfg  sizecheck_image.sh  smoketest_image.py
sudolver_api/app/: auth.py  auth_middleware.py  dependencies.py  main.py
sudolver_api/app/routers/: sudoku.py
sudolver_api/app/sudolver/: image_binary.py  image_gray.py  image_rgb.py  sudoku_extraction.py  sudolver.py  utils.py
sudolver_api/app/sudolver/contours_extraction/: contours_sudoku_extraction.py  digit_classifier.py
sudolver_api/app/sudolver/object_detection/: bounding_box.py  largest_sudoku_object_detection.py  sudoku_object_detection.py  yolo_sudoku_object_detection.py
sudolver_api/app/sudolver/textract_extraction/: image_analysis.py  image_table_extraction.py  textract_sudoku_extraction.py
sudolver_api/tests/app/: test_api.py
sudolver_api/tests/app/sudolver/contours_extraction/: test_contours_sudoku_extraction.py  test_digit_classifier.py
sudolver_api/tests/app/sudolver/object_detection/: test_yolo_object_detection.py
webapp/: .gitignore  netlify.toml  package.json  playwright.config.ts  remix.config.js  tailwind.config.js
webapp/.storybook/: main.js  preview.js
webapp/app/: root.tsx
webapp/public/: browserconfig.xml
webapp/tests/: example.spec.ts
(+30 files in other folders)
